[package]
name = "ethereum-txpool-service"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
auto_impl = "0.4"
clap = { version = "3.0.0-beta" }
ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false }
ethereum-txpool = { git = "https://github.com/rust-ethereum/txpool" }
ethereum-types = "0.9"
futures = "0.3"
hex = "0.4"
hex-literal = "0.3"
prost = "0.6"
rlp = "0.4"
secp256k1 = { version = "0.19", features = ["endomorphism"] }
serde = { version = "1", features = ["derive"] }
sha3 = "0.9"
task-group = { git = "https://github.com/vorot93/task-group" }
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = { git = "https://github.com/vorot93/tokio-compat-02", branch = "vorot93/tokio-1" }
toml = "0.5"
tonic = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2"
web3 = { version = "0.13", default-features = false, features = ["http-tls"] }

[build-dependencies]
tonic-build = "0.3"
